修改打包配置